// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "oj_lab.judger";
option java_outer_classname = "JudgerJudger";

option go_package = "oj_lab.judger";

package judger;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

service Judger {
  rpc Judge (stream JudgeRequest) returns (stream JudgeReply) {}
}

message JudgeRequest {
  string language = 1;
  string code = 2;
  string input = 3;
  string output = 4;
  int64 time_limit = 5;
  int64 memory_limit = 6;
}

message JudgeReply {
  int64 time_used = 1;
  int64 memory_used = 2;
  string result = 3;
  string error = 4;
}